# wysiwyd

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  README.md  appveyor.yml
main/: CMakeCache.txt  CMakeLists.txt  cmake_uninstall.cmake.in
main/app/: CMakeLists.txt
main/app/abm/: CMakeLists.txt
main/app/abm/ABMRosToYarpBridge/: CMakeLists.txt
main/app/abm/abmHandler/: CMakeLists.txt
main/app/abm/abmReasoning/: CMakeLists.txt
main/app/abm/abmVision/: CMakeLists.txt
main/app/abm/autobiographicalMemory/: CMakeLists.txt
main/app/abm/proprioRosYarpExample/: CMakeLists.txt
main/app/abmInteraction/: CMakeLists.txt
main/app/abmInteraction/conf/: abmInteraction.ini  client.ini  nodeYesNo.xml
main/app/adaptiveLayer/: CMakeLists.txt
main/app/adaptiveLayer/conf/: client.ini  default.ini
main/app/agentDetector/: CMakeLists.txt
main/app/agentDetector/conf/: agentDetector.ini
main/app/allostasis/conf/: choregraphiesMainLoop.ini  client.ini
main/app/allostaticController/: CMakeLists.txt
main/app/allostaticController/conf/: default.ini
main/app/attentionRelated/: CMakeLists.txt
main/app/attentionRelated/attentionSelector/: CMakeLists.txt
main/app/attentionRelated/ears/: CMakeLists.txt
main/app/attentionRelated/pasar/: CMakeLists.txt
main/app/awareTouch/: CMakeLists.txt
main/app/awareTouch/.svn/: entries
main/app/awareTouch/conf/: config-advanced.ini  config.ini  pinch.txt  simplePoke.txt
main/app/awareTouch/scripts/: awareTouchLyon.xml.template
main/app/behaviorManager/conf/: client.ini
main/app/behaviorRelated/: CMakeLists.txt
main/app/behaviorRelated/allostasis/: CMakeLists.txt
main/app/bodySchema/: CMakeLists.txt
main/app/bodySchema/babbling/: CMakeLists.txt
main/app/bodySchema/conf/: babbling.ini  bodySchema.ini  bodySchemaPlot.xml  inputs.txt
main/app/bodySchema/modelOTL/: CMakeLists.txt
main/app/bodySchema/scripts/: bodySchema.xml.template
main/app/bodySchema/sensoryProcessor/: CMakeLists.txt
main/app/contextualLayer/: CMakeLists.txt
main/app/contextualLayer/goalManager/: CMakeLists.txt
main/app/contextualLayer/planner/: CMakeLists.txt
main/app/cvz/: CMakeLists.txt
main/app/cvz/conf/: default.ini  defaultFiber.ini  default_NN.ini  foveaCell.ini  icub_head.ini  icub_left_arm.ini  icub_right_arm.ini  icub_skin_left_forearm.ini  icub_skin_right_forearm.ini  icub_vestibular.ini  icub_vision.ini  mirrorSystem.ini  mirrorSystemVision.ini  retinaCell.ini  sound.ini  stackDefault.ini  stackExample_vision.ini  v1.ini  v1_3x3.ini
main/app/cvz/scripts/: NNTests.xml.template  VisualSystem.xml  fiberVision.xml.template  imitationMotorBabbling.xml.template
main/app/cvzBCBT2014/: CMakeLists.txt
main/app/cvzBCBT2014/conf/: auditoryMotor.ini  auditoryMotorSpectrum.ini  client.ini  keyboardPostures.ini
main/app/cvzBCBT2014/scripts/: eyeHand.xml.template  motorAuditory.xml.template  motorAuditorySpectrum.xml.template
main/app/cvzDoubleTouch/: CMakeLists.txt
main/app/cvzDoubleTouch/conf/: forearm_mask_generator.csv  forearm_mask_generator.xlsx  icub_head.ini  icub_right_arm.ini  icub_skin_left_forearm.ini  icub_skin_left_forearm_full_admissible.ini  icub_skin_right_hand.ini  icub_vision.ini  palm_mask_generator.csv  proprioHapticSingleMap.ini
main/app/cvzDoubleTouch/scripts/: mmcmPredictionVisualization.xml
main/app/cvzRelated/: CMakeLists.txt
main/app/demos/: CMakeLists.txt
main/app/demos/scripts/: MentalOPC.xml  PPS_with_valence_and_stress_Test.xml  PPS_with_valence_and_stress_Test_icubSim.xml  PPS_with_valence_byHand_Test.xml  ReactiveTestingMode.xml  TestingValueSystem.xml  dumpLund.xml  guiMentalOPC.ini  (+12 more)
main/app/dumpers/: CMakeLists.txt
main/app/facialEmotions/: CMakeLists.txt
main/app/gameCluedo/: CMakeLists.txt
main/app/humanUnderstanding/: CMakeLists.txt
main/app/icubClient/: CMakeLists.txt
main/app/imitationMotorBabbling/: CMakeLists.txt  client.ini
main/app/interpersonalDistanceRegulator/: CMakeLists.txt
main/app/iol2opc/: CMakeLists.txt
main/app/jointsAwareness/: CMakeLists.txt
main/app/keyboardBabbling/: CMakeLists.txt
main/app/kinematicStructureLearning/: CMakeLists.txt
main/app/languageActionAnalysis/: CMakeLists.txt  client.ini
main/app/learnPrimitive/: CMakeLists.txt
main/app/lrh/: CMakeLists.txt  client.ini
main/app/narrativeRelated/: CMakeLists.txt
main/app/opcRelated/: CMakeLists.txt
main/app/perspectiveTaking/: CMakeLists.txt
main/app/postureBabbler/: CMakeLists.txt
main/app/ppsAllostatic/: CMakeLists.txt
main/app/ppsModulation/: PPS_modulation_iCub.xml  PPS_modulation_icubSim.xml
main/app/proactiveTagging/: CMakeLists.txt
main/app/qRM/: CMakeLists.txt
main/app/reactable2opc/: CMakeLists.txt
main/app/reactableRelated/: CMakeLists.txt
main/app/reactiveLayer/: CMakeLists.txt
main/app/reactiveLayerEFAA/: CMakeLists.txt  posturesMainLoop.ini
main/app/referenceFrameHandler/: CMakeLists.txt
main/app/reservoir/: CMakeLists.txt
main/app/reservoirHandler/: CMakeLists.txt  client.ini  reservoirHandler.xml
main/app/samRelated/: CMakeLists.txt
main/app/sensoryProcessor/: CMakeLists.txt
main/app/systemHaptic/: CMakeLists.txt
main/app/systemMotor/: CMakeLists.txt
main/app/systemVisual/: CMakeLists.txt
main/app/tools/: CMakeLists.txt
main/app/touchDetector/: CMakeLists.txt
main/app/visionRelated/: CMakeLists.txt
main/app/visualSystem/: CMakeLists.txt
main/conf/: Doxyfile.txt  FindARToolKit.cmake  FindFFTW3.cmake  FindIQR.cmake  FindKinectSDK.cmake  FindNaoQI.cmake  FindOTL.cmake  FindOpenNI.cmake  FindPGSQL.cmake  FindR.cmake  FindTUIO.cmake  wysiwydFindDependencies.cmake  wysiwydOptions.cmake  wysiwydUseQt5.cmake
main/src/: CMakeLists.txt
main/src/doc/: groups.dox  main.dox
main/src/examples/: CMakeLists.txt
main/src/idl_generated_code/: cvzMmcm_thrift.cmake  interpersonalDistanceRegulator_thrift.cmake  iol2opc_thrift.cmake  perspectiveTaking_thrift.cmake  slidingController_thrift.cmake
main/src/libraries/: CMakeLists.txt
main/src/modules/: CMakeLists.txt
main/src/tests/: CMakeLists.txt
(+4502 files in other folders)
