# Copyright: (C) 2014 WYSIWYD Consortium
# Authors: Ugo Pattacini
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

project(wysiwyd)

add_subdirectory(reactable2opc)
add_subdirectory(slidingController)
add_subdirectory(referenceFrameHandler)
add_subdirectory(cvz)
add_subdirectory(visualSystem)
add_subdirectory(awareTouch)
add_subdirectory(abm)
add_subdirectory(opcRelated)
add_subdirectory(reactiveLayer)
add_subdirectory(adaptiveLayer)
add_subdirectory(interpersonalDistanceRegulator)
add_subdirectory(attentionRelated)
add_subdirectory(demos)
add_subdirectory(dumpers)
add_subdirectory(agentDetector)
add_subdirectory(bodySchema)
add_subdirectory(qRM)

