# Copyright: (C) 2014 WYSIWYD Consortium
# Authors: Ugo Pattacini
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

project(wysiwyd)

add_subdirectory(abm)
add_subdirectory(adaptiveLayer)
add_subdirectory(attentionRelated)
add_subdirectory(bodySchema)
add_subdirectory(cvzRelated)
add_subdirectory(demos)
add_subdirectory(dumpers)
add_subdirectory(facialEmotions)
add_subdirectory(gameCluedo)
add_subdirectory(humanUnderstanding)
add_subdirectory(icubClient)
add_subdirectory(interpersonalDistanceRegulator)
add_subdirectory(learnPrimitive)
add_subdirectory(narrativeRelated)
add_subdirectory(opcRelated)
add_subdirectory(perspectiveTaking)
add_subdirectory(ppsAllostatic)
add_subdirectory(reactableRelated)
add_subdirectory(reservoir)
add_subdirectory(systemHaptic)
add_subdirectory(systemMotor)
add_subdirectory(systemVisual)
add_subdirectory(tools)
add_subdirectory(visionRelated)
add_subdirectory(samRelated)
add_subdirectory(reactiveLayer)
add_subdirectory(contextualLayer)
add_subdirectory(sensoryProcessor)
